refactor all security-service