@@ -7,50 +7,38 @@ import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
 import java.util.Collection;
+import java.util.Collections;
 import java.util.List;
 
 
-@Entity
+@Data
 @Builder
-@Getter
-@Setter
 @NoArgsConstructor
 @AllArgsConstructor
+@Entity
 @Table(name = "users")
 public class User implements UserDetails {
     @Id
-    @Column(name = "id")
     @GeneratedValue(strategy = GenerationType.IDENTITY)
     private Long id;
 
-    @Column(name = "username", unique = true, nullable = false)
-    private String username;
-
-    @Column(name = "password", nullable = false)
+    private String email;
     private String password;
 
-    @Column(name = "email", unique = true, nullable = false)
-    private String email;
-
     @Enumerated(EnumType.STRING)
-    @Column(name = "role", nullable = false)
     private Role role;
 
-    @Column(name = "phone")
-    private String phone;
 
-    @Column(name = "telegram_id", unique = true)
-    private String telegramId;
 
 
     @Override
     public Collection<? extends GrantedAuthority> getAuthorities() {
-        return List.of(new SimpleGrantedAuthority(role.name()));
+        return Collections.singletonList(role);
     }
 
     @Override
     public String getUsername() {
-        return this.username;
+        return email;
     }
 
     @Override
